--- a/122923_단축키_마크다운.ipynb
+++ b/122923_단축키_마크다운.ipynb
@@ -26,7 +26,7 @@
       "source": [
         "print(\"Hello world\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -43,15 +43,16 @@
         "# 1. 단축키\n",
         "\n",
         "1. Ctrl + Enter: 해당 셀 실행\n",
-        "2. Alt + Enter: 해당 셀 실행 + 코드 블록 하단 추가\n",
-        "3. Ctrl + M + A: 코드 셀 위에 삽입\n",
-        "4. Ctrl + M + B: 코드 셀 아래에 삽입\n",
-        "5. Ctrl + M + D: 셀 지우기\n",
-        "6. Ctrl + M + Y: 코드 셀로 변경\n",
-        "7. Ctrl + M + M: 마크다운 셀로 변경\n",
-        "8. Ctrl + M + Z: 실행 취소\n",
+        "2. Shift + Enter: 해당 셀 실행 + 다음 셀로 이동\n",
+        "3. Alt + Enter: 해당 셀 실행 + 코드 블록 하단 추가\n",
+        "4. Ctrl + M + A: 코드 셀 위에 삽입\n",
+        "5. Ctrl + M + B: 코드 셀 아래에 삽입\n",
+        "6. Ctrl + M + D: 셀 지우기\n",
+        "7. Ctrl + M + Y: 코드 셀로 변경\n",
+        "8. Ctrl + M + M: 마크다운 셀로 변경\n",
+        "9. Ctrl + M + Z: 실행 취소\n",
         "\n",
-        "+ Crtl + M + H: 단축키 모음보기"
+        "* Crtl + M + H: 단축키 모음보기"
       ],
       "metadata": {
         "id": "vwvlMRok9Eta"
@@ -69,7 +70,7 @@
         "id": "WsvEzPI59vJn",
         "outputId": "adf2e3d5-39b4-4d5c-d1e1-5b723b964927"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +93,7 @@
         },
         "outputId": "0f017208-36f5-431d-933a-959a4f0e492b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -152,14 +153,16 @@
       "source": [
         "# 2. 수정 관련 단축키\n",
         "\n",
-        "1. Ctrl + Alt + 화살표 위 또는 아래: 동시수정\n",
+        "1. Ctrl + Alt + 화살표 위아래: 동시수정\n",
         "2. Ctrl + D: 같은 단어 찾기\n",
         "3. Ctrl + Shift + L: 동일 단어를 전체로 찾아 동시 수정\n",
-        "4.  Home, End: 문장의 양 끝 이동\n",
-        "5. Ctrl + /: 주석\n",
-        "6. Shift + Del : 한 줄 지우기\n",
-        "7. Tab, Ctrl + ] : 들여쓰기\n",
-        "8. Shift + Tab, Ctrl + [ : 내어쓰기"
+        "4. Alt + Shift + 화살표 위아래: 해당 내용을 위나 아래 복사하여 붙여넣기\n",
+        "5. Alt + 화살표위아래: 해당 내용을 위나 아래로 보내기\n",
+        "6.  Home, End: 문장의 양 끝 이동\n",
+        "7. Ctrl + /: 주석\n",
+        "8. Shift + Del : 한 줄 지우기\n",
+        "9. Tab, Ctrl + ] : 들여쓰기\n",
+        "10. Shift + Tab, Ctrl + [ : 내어쓰기"
       ],
       "metadata": {
         "id": "hLMwycA0B5jX"
@@ -276,7 +279,7 @@
         "# 3.6\n",
         "\n",
         "* 인라인 코드: `를 사용하여 텍스트 내에 코드 삽입\n",
-        "* 코드 블록: 여러 줄의 코드를 나타낼 때에는 ``` ` 3개로 감싸기 ``` 사용하여 코드 블록 생성\n",
+        "* 코드 블록: 여러 줄의 코드를 나타낼 때에는 ```  ``` 사용하여 코드 블록 생성\n",
         "\n",
         "`print(\"Hello World\")`\n",
         "\n",
@@ -298,7 +301,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3.7 기타\n",
+        "# 3.7 취소선, 인용문, 구분선\n",
         "\n",
         "* 취소선 ~~~취소선~~~\n",
         "* 인용문\n",
